--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <h2>国内可用的 ChatGPT 镜像网站推荐</h2>
     <p>以下是精选的国内优质 <strong>ChatGPT 中文版镜像网站</strong>，提供高效的中文访问体验：</p>
     <ul>
-        <li><a href="https://ai.bearvision.cn/" target="_blank">https://ai.bearvision.cn/</a> - <strong>免费ChatGPT</strong>，支持 GPT-4、4o、o1、o3、deepseek ，手机号邮箱登录，支持图片，文件分析。</li>
+        <li><a href="https://ai.xycoc.cn/" target="_blank">https://ai.xycoc.cn/</a> - <strong>免费ChatGPT</strong>，支持 GPT-4、4o、o1、o3、deepseek ，手机号邮箱登录，支持图片，文件分析。</li>
         <li><a href="https://chat.yixiaai.com/" target="_blank">https://chat.yixiaai.com/</a> - <strong>ChatGPT中文版</strong>，运营近2年，支持 GPT-4、4o 以及 o1，支持 AI 绘画，扫码即可使用。</li>
         <li><a href="https://www.yixiaai.com/" target="_blank">https://chat.lify.vip/</a> - <strong>ChatGPT镜像网站</strong>，运营近2年，支持 GPT-4、4o 以及 o1，提供 AI 文件、AI PPT、AI 助手、AI 插件功能、思维导图。</li>
     </ul>
@@ -308,3 +308,4 @@
     </script>
 </body>
 </html>
+
